# Generic_Argorithm_for_Arm

./: README.md
C++/: CMakeLists.txt  main.cpp
C++/run_20250906_132435/: ParetoObjs.csv  ParetoVars.csv  debug_log.csv
Matlab/解析用/: Collision.m  Evaluate.m  GA.m  Generic_algorithm_arm.m  IK.m  Kin.m  Quat.m  Util.m  run_ga.m  test_visualize_one_pose.m  test_visualize_pose.m
Matlab/解析用/_function_map/: edges.csv  func_graph.mmd
Matlab/評価用/: default_selectors.m  main_pick_representatives_allgens.m  tie_break.m
Matlab/評価用/_function_map/: summary.md
解析用/: ArmKineDyn.m  Collision.m  Dyn.m  Evaluate.m  FK.m  FK_with_joints.m  FK_with_pose.m  GA.m  GPT受け渡し用ファイル.txt  Generic_algorithm_arm.m  IK.asv  IK_solver.m  Kin.m  Log.m  Quat.m  SE3.m  Util.m  append_debug_row.m  computeTorque.m  compute_crowding_all.m  crowding_distance.m  dotparts.m  environmental_selection.m  eul2quat_zyx_deg.m  hypervolume.m  hypervolumeContribution.m  log_write_generation.m  minLinkDistance.m  pareto_rank.m  quat2rotm_safe.m  quat_conj.m  quat_log_err.m  quat_mul.m  quat_normalize.m  quat_slerp.m  quatlog.m  read_me.txt  rotm2quat_safe.m  rotx.m  rotz.m  (+8 more)
解析用/_function_map/: edges.csv  func_graph.mmd  nodes.csv  summary.md
解析用/private/: poly_mutation.m  sbx_crossover.m  tournament_select.m
解析用/いろいろ/: FK_test.m  Generic_algorithm_original.m
評価/: argmin_vecnorm.m  default_selectors.m  get_or_nan.m  getdef.m  main_pick_representatives.m  main_pick_representatives_allgens.m  must_have.m  name2idx.m  pick_representatives.m
評価/_function_map/: edges.csv  func_graph.mmd  nodes.csv
